PN-19320 - added new apis to openAPI + empty implementation
